specify px in stylesheets, to avoid error reports. Still some others firefox complains about, but IE requires.  Fix TT whitespace to avoid bad image spacing (using floats avoids them too, but I may not always use float).  Add some custom ajax response items.  Can use this same scheme to work out good shared info with the Nokia skin, leaving the custom stuff for each skin to handle on its own. Starting attempts at updating track info in undock.
git-svn-id: file:///home/awy/mirror/slim/trunk/server@6921 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/gray.css
+++ b/HTML/Fishbone/gray.css
@@ -11,8 +11,8 @@ H3 {
 	font-size : 14pt;
 	font-weight : bold;	
 	text-align : left;
-	margin: 4 0 2 0;
-	padding: 4 0 2 0;
+	margin: 4px 0 2px 0;
+	padding: 4px 0 2px 0;
 }
 
 TD, P, A {
@@ -101,7 +101,7 @@ A.linkbtn:link {
 .masthead
 {
 	margin:0px;
-	padding: 5 8 5 8;
+	padding: 5px 8px 5px 8px;
 	background:#333;
 	color:white;
 	border-bottom:2px solid white;
@@ -110,7 +110,7 @@ A.linkbtn:link {
 #TopMenu1
 {
 	margin:0px;
-	padding:2 5 2 5;
+	padding:2px 5px 2px 5px;
 	background:#61676c;
 	color:white;
 }
@@ -119,14 +119,14 @@ A.linkbtn:link {
 {
 	color:#e8e8e8 ! important;
 	border-bottom:2px solid #777;
-	margin:2 0 2 0;
+	margin:2px 0 2px 0;
 	font-size:10px ! important;
 }
 
 .label2
 {
 	color:black;
-	margin:2 0 2 0;
+	margin:2px 0 2px 0;
 	font-size:10px ! important;
 }
 
@@ -208,7 +208,7 @@ A.linkbtn:link {
 	margin:0px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	padding:3 8 3 8;
+	padding:3px 8px 3px 8px;
 	background:#61676c;
 	color:white;
 }
@@ -219,7 +219,7 @@ DIV.playlistform,#TopMenu2
 	margin:0px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	padding:4 2 4 2;
+	padding:4px 2px 4px 2px;
 	background:#999;
 	color:white;
 }
