--- a/HTML/Fishbone/tan.css
+++ b/HTML/Fishbone/tan.css
@@ -11,8 +11,8 @@ H3 {
 	font-size : 12pt;
 	font-weight : bold;	
 	text-align : left;
-	margin:4 0 2 0;
-	padding: 4 0 2 0;
+	margin: 4px 0 2px 0;
+	padding: 4px 0 2px 0;
 }
 
 TD, P, A {
@@ -109,7 +109,7 @@ A.linkbtn:link {
 #TopMenu1
 {
 	margin:0px;
-	padding:2 5 2 5;
+	padding:2px 5px 2px 5px;
 	background:#c2a05b;
 	color:white;
 }
@@ -118,14 +118,14 @@ A.linkbtn:link {
 {
 	color: white ! important;
 	border-bottom:1px solid #330000;
-	margin:2 0 2 0;
+	margin:2px 0 2px 0;
 	font-size:10px ! important;
 }
 
 .label2
 {
 	color:#330000;
-	margin:2 0 2 0;
+	margin:2px 0 2px 0;
 	font-size:10px ! important;
 }
 
@@ -219,7 +219,7 @@ A.linkbtn:link {
 	margin:0px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	padding:3 8 0 8;
+	padding:3px 8px 0px 8px;
 	background:#f8eabf;
 	color:black;
 }
@@ -234,7 +234,7 @@ DIV.playlistform,#TopMenu2
 	margin:0px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	padding:5 2 5 2;
+	padding:5px 2px 5px 2px;
 	background:#d1b586;
 	color:white;
 }
